--- a/centos-6.5/Vagrantfile
+++ b/centos-6.5/Vagrantfile
@@ -9,14 +9,26 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.define :centos65 do |centos65|
     centos65.vm.box = box
     centos65.vm.network "private_network", ip: "10.0.0.2"
+    #centos65.vm.network :forwarded_port, guest: 22, host: 2201, id: "ssh", auto_correct: true
     centos65.vm.hostname = "centos65"
-      ## load the salt folder
-    centos65.vm.synced_folder "../salt/roots/", "/srv/"
+
+    config.vm.provider "virtualbox" do |v|  
+      v.memory = 512
+    end
+    config.vm.provider :virtualbox do |vb|
+      vb.customize ["modifyvm", :id, "--memory", "512"] 
+      vb.customize ["setextradata", :id, "VBoxInternal2/SharedFoldersEnableSymlinksCreate//git", "1"]  
+    end
+
+    ## load the salt folder
+    centos65.vm.synced_folder "salt/roots/", "/srv/"
+    
     # provision
     centos65.vm.provision :salt do |salt|
-      salt.minion_config = "../salt/minion"
+      salt.minion_config = "salt/minion"
       salt.run_highstate = true
     end
+
   end
   
 end
