--- a/centos-6.5/Vagrantfile
+++ b/centos-6.5/Vagrantfile
@@ -13,15 +13,16 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     centos65.vm.hostname = "zcfd-centos65"
 
     config.vm.provider "virtualbox" do |v|  
-      v.memory = 512
+      v.memory = 1024
     end
     config.vm.provider :virtualbox do |vb|
-      vb.customize ["modifyvm", :id, "--memory", "512"] 
+      vb.customize ["modifyvm", :id, "--memory", "1024"] 
       vb.customize ["setextradata", :id, "VBoxInternal2/SharedFoldersEnableSymlinksCreate//git", "1"]  
     end
 
     ## load the salt folder
     centos65.vm.synced_folder "salt/roots/", "/srv/"
+    centos65.vm.synced_folder "../scripts", "/srv/scripts"
     
     # provision
     centos65.vm.provision :salt do |salt|
