--- a/centos-6.5/Vagrantfile
+++ b/centos-6.5/Vagrantfile
@@ -13,10 +13,11 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     centos65.vm.hostname = "zcfd-centos65"
 
     config.vm.provider "virtualbox" do |v|  
-      v.memory = 1024
+      v.memory = 2048
+      v.cpus = 1
     end
     config.vm.provider :virtualbox do |vb|
-      vb.customize ["modifyvm", :id, "--memory", "1024"] 
+      vb.customize ["modifyvm", :id, "--memory", "2048"] 
       vb.customize ["setextradata", :id, "VBoxInternal2/SharedFoldersEnableSymlinksCreate//git", "1"]  
     end
 
