--- a/ubuntu-14.04/Vagrantfile
+++ b/ubuntu-14.04/Vagrantfile
@@ -12,19 +12,20 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     #trusty.vm.network :forwarded_port, guest: 22, host: 2201, id: "ssh", auto_correct: true
     trusty.vm.hostname = "zcfd-trusty"
 
-    config.vm.provider "virtualbox" do |v|  
-      v.memory = 2048
-      v.cpus = 1
+    config.ssh.forward_agent = true
+    config.vm.provider "virtualbox" do |v|
+      v.memory = 8192
+      v.cpus = 4
     end
     config.vm.provider :virtualbox do |vb|
-      vb.customize ["modifyvm", :id, "--memory", "2048"] 
-      vb.customize ["setextradata", :id, "VBoxInternal2/SharedFoldersEnableSymlinksCreate//git", "1"]  
+      vb.customize ["modifyvm", :id, "--memory", "8192"]
+      vb.customize ["setextradata", :id, "VBoxInternal2/SharedFoldersEnableSymlinksCreate//git", "1"]
     end
 
     ## load the salt folder
     trusty.vm.synced_folder "salt/roots/", "/srv/"
     trusty.vm.synced_folder "../scripts", "/srv/scripts"
-    
+
     # provision
     trusty.vm.provision :salt do |salt|
       salt.minion_config = "salt/minion"
@@ -32,6 +33,6 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     end
 
   end
-  
+
 end
 
